  lblIncludeAttachments = Include Attachments
  lblCopyAttachments = Copy Attachments
  lblAfter = After
  msgLoginFailed=You could not be logged in
  msgLoginFailedDetails=Invalid credentials were provided. Please enter the correct username and password.
  lblItemsPerPage = Items per page:
- Web; options for references - make array of correct size (saves time)
- Web; use translation
- Web; saving items
- Web; viewing of an item
- Web; attachments
- Web; add/delete pictures


--------------------------------------------------------------------
Data Crow version 5.0  BETA IV                Released on 2024-11-20
--------------------------------------------------------------------

[Fixed]
- Database: added missing index for music tracks (performance fix).
- Port numbers were not remembered (login dialog).
- Quick view in client-server mode sometimes did not load the pictures fully.

[Changed]
- Larger pictures in the quick view description panel (max 500x400).
- Added image server address as a parameter (optional).

[Beta fixes]:
- Multi-reference fields were all broken.
- Online search: item was not correctly updated with the music tracks.
- Various issues with new pictures have been resolved.
- High CPU usage when the card view is shown.


--------------------------------------------------------------------
Data Crow version 5.0  BETA III               Released on 2024-11-07
--------------------------------------------------------------------
I am releasing this version as people had issues upgrading - image conversion was failing.
This releases addresses this issue (many thanks to Bert for sharing his data with me).

[Fixed]
- Database was not operating in logging mode - there was a fair chance information would be lost in case of a crash.
- Database write to file delay has been set to zero meaning that Data Crow will write the information more often to disk.